# battlesnakes

./: Cargo.toml  Dockerfile  rustfmt.toml
.cargo/: config.toml
.github/workflows/: docker-publish.yml
src/: lib.rs
src/aesthetic/: colour.rs  head.rs  mod.rs  snakeinfo.rs  tail.rs
src/api/requests/: movement.rs
src/api/responses/: aesthetic.rs  mod.rs  movement.rs
src/snakes/: mod.rs  snake.rs
src/snakes/spacewhale/: mod.rs
src/wire_representation/: aesthetic.rs  mod.rs  movement.rs
