[package]
name = "battlesnakes"
version = "0.1.0"
edition = "2021"
authors = ["backwardspy"]

[dependencies]
axum = "0"
battlesnake-game-types = "0"
color-eyre = "0"
hyper = { version = "0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = "0"
