[package]
name = "battlesnakes"
version = "0.1.0"
edition = "2021"
authors = ["backwardspy"]

[features]
default = ["spacewhale"]
spacewhale = []

[dependencies]
axum = "0"
battlesnake-game-types = { git = "https://github.com/penelopezone/battlesnake-game-types.git" }
color-eyre = "0"
hyper = { version = "0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = "0"
tower-http = { version = "0", features = ["cors", "trace"] }
tracing = "0"
tracing-subscriber = "0"
